--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,19 @@
 	<artifactId>Java-TestNG-Selenium</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 	<dependencies>
 
 		<dependency>
@@ -21,6 +34,8 @@
 
 
 	</dependencies>
+	
+
 
 
 </project>
