sure fire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
 <build>
     <plugins>
+    
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -14,6 +15,13 @@
                 <target>1.8</target>
             </configuration>
         </plugin>
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+        </plugin>
+        
     </plugins>
 </build>
 
