--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,14 @@
 			</plugin>
 			<!-- Compiler plugin configures the java version to be usedfor compiling
 				the code -->
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-				</configuration>
-			</plugin>
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <configuration>
+		            <source>1.7</source>
+		            <target>1.7</target>
+		        </configuration>
+		    </plugin>
         
     </plugins>
 </build>
